--- a/block-BJaaed/code/index.html
+++ b/block-BJaaed/code/index.html
@@ -8,5 +8,13 @@
   </head>
   <body>
     <script src="./script.js"></script>
+    <header>
+      <h1>Bookly</h1>
+    </header>
+    <main>
+      <div>
+        <ul></ul>
+      </div>
+    </main>
   </body>
 </html>
