--- a/block-BJaaed/code/index.html
+++ b/block-BJaaed/code/index.html
@@ -6,14 +6,53 @@
     <title>Books for learning JavaScript</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body class="Container">
     <script src="./script.js"></script>
     <header>
       <h1>Bookly</h1>
     </header>
     <main>
       <div>
-        <ul></ul>
+        <ul class="flex">
+          <li> 
+            <img src="https://eloquentjavascript.net/img/cover.jpg" alt="A Modern Introduction to Programming">
+            <h2>Eloquent JavaScript, Second Edition</h2>
+            <p>Marijn Haverbeke</p>
+            <button>Buy Now</button>
+          </li>
+          <li> 
+            <img src="https://eloquentjavascript.net/img/cover.jpg" alt="A Modern Introduction to Programming">
+            <h2>Eloquent JavaScript, Second Edition</h2>
+            <p>Marijn Haverbeke</p>
+            <button>Buy Now</button>
+          </li>
+          <li> 
+            <img src="https://eloquentjavascript.net/img/cover.jpg" alt="A Modern Introduction to Programming">
+            <h2>Eloquent JavaScript, Second Edition</h2>
+            <p>Marijn Haverbeke</p>
+            <button>Buy Now</button>
+          </li>
+          <li> 
+            <img src="https://eloquentjavascript.net/img/cover.jpg" alt="A Modern Introduction to Programming">
+            <h2>Eloquent JavaScript, Second Edition</h2>
+            <p>Marijn Haverbeke</p>
+            <button>Buy Now</button>
+          </li>
+          <li> 
+            <img src="https://eloquentjavascript.net/img/cover.jpg" alt="A Modern Introduction to Programming">
+            <h2>Eloquent JavaScript, Second Edition</h2>
+            <p>Marijn Haverbeke</p>
+            <button>Buy Now</button>
+          </li>
+          <li> 
+            <img src="https://eloquentjavascript.net/img/cover.jpg" alt="A Modern Introduction to Programming">
+            <h2>Eloquent JavaScript, Second Edition</h2>
+            <p>Marijn Haverbeke</p>
+            <button>Buy Now</button>
+          </li>
+
+
+        </ul>
       </div>
     </main>
   </body>
