--- a/block-BJaaef/code/index.html
+++ b/block-BJaaef/code/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
+      <main>
+        <section>
+          <header>
+            <h1>
+              peoples of GOT
+            </h1>
+          </header>
+          <div class="flex flex-wrap all-box">
+
+          </div>
+        </section>
+      </main>
+    </div>
     <script src="./data.js"></script>
     <script src="./script.js"></script>
   </body>
